--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-<link rel="stylesheet" href="https://static2.sharepointonline..com/files/fabric/office-ui-fabric-core/4.1.0/css/fabric.min.css">
-<span class="ms-font-su ms-fontColor-themePrimary">Alexander Sapozhkov</span>
+<head>
+    <link rel="stylesheet" href="https://static2.sharepointonline..com/files/fabric/office-ui-fabric-core/4.1.0/css/fabric.min.css">
+</head>
+<body>
+    <span class="ms-font-su ms-fontColor-themePrimary">Alexander Sapozhkov</span>
+</body>
