--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="https://static2.sharepointonline..com/files/fabric/office-ui-fabric-core/4.1.0/css/fabric.min.css">
+    <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/4.1.0/css/fabric.min.css">
 </head>
 <body>
     <span class="ms-font-su ms-fontColor-themePrimary">Alexander Sapozhkov</span>
