--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <head>
     <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/4.1.0/css/fabric.min.css">
+    <link rel="stylesheet" href="/custom_page_layout.css">
 </head>
 <body>
-    <span class="ms-font-su ms-fontColor-themePrimary">Alexander Sapozhkov</span>
+    <div class="app-wrapper">
+        <span class="ms-font-su ms-fontColor-themePrimary">Alexander Sapozhkov</span>
+    </div>
 </body>
