--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 </head>
 <body>
     <div class="app-wrapper">
-        <span class="ms-font-su ms-fontColor-themePrimary">Alexander Sapozhkov</span>
+        <header>
+            <div class="photo-border">
+                <img src="/person-photo.jpg" class="photo"/>
+            </div>
+            <div class="ms-font-su ms-fontColor-themePrimary">Alexander Sapozhkov</div>
+        </header>
     </div>
 </body>
