--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 <body>
     <div class="app-wrapper">
         <header>
-            <div class="photo-border">
-                <img src="/person-photo.jpg" class="photo"/>
+            <div class="section-wrapper">
+                <figure class="photo-border">
+                    <img src="/person-photo.jpg" class="photo"/>
+                </figure>
+                <div class="ms-font-su ms-fontColor-themePrimary">Alexander Sapozhkov</div>
             </div>
-            <div class="ms-font-su ms-fontColor-themePrimary">Alexander Sapozhkov</div>
         </header>
     </div>
 </body>
