--- a/draft.html
+++ b/draft.html
@@ -1,3 +1,6 @@
-<body style="width:100vw">
+<head>
+    <meta name="viewport" content="width=device-width,initial-scale=1"
+</head>
+<body>
     test
 <body>
