--- a/draft.html
+++ b/draft.html
@@ -1,24 +1,4 @@
-<meta content="initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" name="viewport">
-
-
- <div class=general>
-
- All Ur Content in here etc - or next div etc...
- Below the margin-left: 1% and margin-right: 1% formats your div to your width
- So if ur browser is upright or wide - it is always 1% border width and fits screen.
- Don't use any table width=800 or anything - control it with the 1% margins
-
- </div>
-
- <style>.general { 
- font-family: Verdana; font-size: 10pt; font-weight: normal;
- position: relative;
- background-color: #fafafa;
- padding: 8px;
- margin-top: 4px;
- margin-left: 1%;
- margin-right: 1%;
- border: 1px solid #000;
- border-radius:5px;
- }
-</style>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<body>
+test1
+</body>
