--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/4.1.0/css/fabric.min.css">
     <link rel="stylesheet" href="/custom_page_layout.css">
 </head>
