--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<head>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/4.1.0/css/fabric.min.css">
-    <link rel="stylesheet" href="/custom_page_layout.css">
-</head>
-<body>
-    <div class="app-wrapper">
-        <header>
-            <div class="section-wrapper">
-                <figure class="photo-border">
-                    <img src="/person-photo.jpg" class="photo"/>
-                </figure>
-                <div class="ms-font-su ms-fontColor-themePrimary">Alexander Sapozhkov</div>
-            </div>
-        </header>
-    </div>
-</body>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="/favicon.ico"><title>Alexander Sapozhkov</title><link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/4.1.0/css/fabric.min.css"><link href="/static/css/main.291b2a44.css" rel="stylesheet"></head><body><div id="root"></div><script type="text/javascript" src="/static/js/main.2b01a7eb.js"></script></body></html>
